# MMR-Ranges

./: .gitignore  README.md  asset-manifest.json  index.html  main.py  package-lock.json  package.json  postcss.config.js  precache-manifest.00562119fec960776202ca3f3ee9efd8.js  precache-manifest.014c530b7e8c0d646f23f7253ded3c40.js  precache-manifest.03c425c76fd7855d326ac9cb5e73b985.js  precache-manifest.04233108bb2eb8cb3af80217656aaebd.js  precache-manifest.043df76616de3b3e346624ff85c09d81.js  precache-manifest.059f09f128f7eb2387917115fe073bef.js  precache-manifest.06014fe004510897b0517c3e75fb59da.js  precache-manifest.067033e5b269715cf787362b3d76fb78.js  precache-manifest.06a53bb8e26e5321d59a6dff9078c56f.js  precache-manifest.072aa7b81cb32e919a41406e40af5251.js  precache-manifest.0740eb916ac6f95943c540c11ed20509.js  precache-manifest.085bbfb16e803a6ae93c076392441965.js  precache-manifest.0b96c899f0d785b5ed4371eb368ecdae.js  precache-manifest.0e851062eebd4167d010294df1e8ca45.js  precache-manifest.0fbd368fc2b23a33f063a283d91b61b1.js  precache-manifest.11389e4b89e824fa4c7eb1b1d1e9103e.js  precache-manifest.114800f0bc45adc36469af6f1d66ff6e.js  precache-manifest.160214389a35edf767b7cad0857adf71.js  precache-manifest.16ea8e771002912d8d7d18e07bb06fd4.js  precache-manifest.182630afd4413d9efaa846e1ac9d1526.js  precache-manifest.18d89c8f87316c05eb69b18bb1e12327.js  precache-manifest.1abab0761f00952e0ee7b02f43ead56e.js  precache-manifest.1c043ec3e30a49858c24ada987f5a749.js  precache-manifest.1c5a00f69f3da30b659a975bcbf930de.js  precache-manifest.1cd84b21a8a2b306890707cc6e99b68d.js  precache-manifest.1d284304a3e7a7bfde63ae8449fa4153.js  precache-manifest.1ed8769e0cebb5fdfc989948971e291e.js  precache-manifest.1ee93354e52d0c3af4a4afde34e98ee8.js  precache-manifest.1f4fd0a708a68f6a1d420f36512cc090.js  precache-manifest.1f887ceb2d3d4194668fe039b95d21e0.js  precache-manifest.20027bf038bff9c765e2bf2594b0a9c9.js  precache-manifest.2097aa17294b9a884ee60e00bdd97df5.js  (+204 more)
.github/workflows/: pythonpackage.yml  (+1 more)
burny_test_template/: min_heap.py
data_structures/: binary_tree.py  max_heap.py  min_heap.py  queue.py  stack.py
gather/: constants.py  create_header.py  create_tables.py  get_api_data.py  get_gm_data.py  get_legacy_ladders_data.py  helper.py
public/: index.html
src/: App.test.tsx  App.tsx  serviceWorker.ts
test/: test_functions.py
(+499 files in other folders)
