[tool.poetry]
name = "MMR_Ranges"
version = "0.1.0"
description = ""
authors = ["BuRny <gamingburny@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = "^3.6.2"
idna-ssl = "^1.1.0"
loguru = "^0.4.1"
aiocontextvars = "^0.2.2"
atomicwrites = "^1.3.0"
contextvars = "^2.4"
win32-setctime = "^1.0.1"
arrow = "^0.15.5"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pytest-asyncio = "^0.10.0"
hypothesis = "^5.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
