[tool.poetry]
name = "MMR_Ranges"
version = "0.1.0"
description = ""
authors = ["BuRny <gamingburny@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.7.4.post0"
idna-ssl = "^1.1.0"
loguru = "^0.5.3"
aiocontextvars = "^0.2.2"
atomicwrites = "^1.4.0"
contextvars = "^2.4"
win32-setctime = "^1.0.3"
arrow = "^1.0.3"
dpath = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
